# KineticGas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  kineticgas-config.cmake  pyproject.toml  release_bodyFile.md  setup.py
.github/_workflows/: run_tests.yml
.github/workflows/: cibuildwheel.yml  cibuildwheels  run_tests.yml
Dockerfiles/: Dockerfile  common_scripts.sh  requirements.txt  run_container.sh
cpp/: AxilrodTeller.h  CMakeLists.txt  ExtendedSutherland.cpp  ExtendedSutherland.h  Factorial.cpp  Factorial.h  HardSphere.h  KineticGas.cpp  KineticGas.h  KineticGasCache.h  KineticGas_mthr.cpp  KineticGas_properties.cpp  LJSpline.cpp  LJSpline.h  LJTS.h  MieKinGas.cpp  MieKinGas.h  ModTangToennis.cpp  ModTangToennis.h  PseudoHardSphere.h  Quantum.cpp  Quantum.h  QuantumMie.cpp  QuantumMie.h  Spherical.cpp  Spherical.h  Sutherland.cpp  Sutherland.h  _Sutherland.cpp  bindings.cpp  build.sh  collision_diameters.cpp  eos_interface.h  extentions.h  global_params.cpp  global_params.h  multiparam.cpp  multiparam.h  readme.md  run_kineticgas.cpp  (+3 more)
cpp/Integration/: Integration.cpp  Integration.h  Integration_new.cpp  bindings.cpp  integrator_tests.cpp  integrator_tests.h
cppExamples/: CMakeLists.txt  basic.cpp
docs/: Gemfile  _config.yml  fluid_ids.py  index.md  join_docs.py  proof_html.sh  readme.md  readme.txt
docs/_includes/: sidebar.html  sidebar.md  sidebar_2.0.0.html  sidebar_2.0.0.md
docs/_layouts/: default.html  home.html
docs/assets/css/: page-header.css
docs/assets/graphics/: header_graphic.py  tools.py
docs/markdown/: advanced.md  cite_acknowl_licence.md  dependencies.md  fluid_identifiers.md  getting_started_cpp.md  getting_started_py.md  header.md  source_build.md  structure.md  toc_github.md  toc_pypi.md
docs/memo/: index.md
docs/memo/binary_limit/binary_limit/: bibliografi.bib  commands.tex  diffusion.tex  main.tex  preamble.tex  soret_coefficient.tex  thermal_diffusion.tex
docs/memo/derivatives/: main.tex
docs/memo/diffusion/diffusion_definitions/: commands.tex  diffusion.tex  main.tex  preamble.tex  thermal_diffusion.tex  zarate.tex
docs/memo/multicomponent/: contact_diameters.tex  diffusion.tex  preamble.tex  viscosity.tex
docs/memo/multicomponent/multicomponent/: bibliografi.bib  conductivity.tex  contact_diameters.tex  thermal_diffusion.tex
docs/metapages/: cite_acknowl_licence.md  contact.md
docs/multicomponent/: commands.tex  intro.tex  main.tex
docs/readme_parts/: header.md  toc_pypi.md
docs/v2.0.0/: HardSphere_methods.md  MieKinGas_methods.md  MieType_methods.md  advanced.md  bugs.md  fluid_identifiers.md  getting_started_cpp.md  getting_started_py.md  header.md  home.md  method_docs.md  py_KineticGas_methods.md  source_build.md  structure.md
docs/vCurrent/: HardSphere_methods.md  MieKinGas_methods.md  MieType_methods.md  ModTangToennies_methods.md  Patowski_methods.md  Quantum_methods.md  advanced.md  fluid_identifiers.md  getting_started_cpp.md  getting_started_py.md  header.md  method_docs.md  py_KineticGas_methods.md  source_build.md  structure.md  units.md
fluids/: AR.json  C1.json  C2.json  C3.json  CO.json  CO2.json  D2.json  H2.json  H2O.json  HE.json  HE3.json  KR.json  LJF.json  NC10.json  NC20.json  NC22.json  NC4.json  NC6.json  NC8.json  NE.json  O-H2.json  O2.json  P-H2.json  PSEUDO.json  XE.json  alias_map.json
fluids/E_bound/: AR.phase_shifts  AR_phase_shifts.json  HE.phase_shifts  HE_phase_shifts.json  NE.phase_shifts  P-H2.phase_shifts  P-H2_phase_shifts.json  README.MD
phase_shifts/: AR.phase_shifts
pyExamples/: custom_eos.py  data_ljs.py  diffusion.py  enskog_ljts.py  lj_vs_ljs.py  ljs.py  ljs_residual_selfdiff.py  ljts_example.py  lowdensity_check.py  rdf_check.py  rdf_test.py  thermal_conductivity.py  viscosity.py
pyExamples/data/: ArKr_cond.csv  co2_viscosity.csv  hydrogen_selfdiffusion.csv
pyUtils/: join_docs.py  markdown_from_docstrings.py  sidebar_to_html.py  tools.py
pykingas/: HardSphere.py  LJSpline.py  LJTS.py  MieKinGas.py  MieType.py  PseudoHardSphere.py  Quantum.py  QuantumMie.py  README.md  Sutherland.py  __init__.py  __main__.py  multiparam.py  py_KineticGas.py  units.py
pykingas/fluids/: AR.json  D2.json  H2.json  H2O.json  KR.json  N2.json  NC10.json  NC15.json  NC20.json  NC22.json  NC5.json  NC7.json  NC8.json  NC9.json  NE.json  O-H2.json  O2.json  P-H2.json  PSEUDO.json
pykingas/tests/: collision_integral_unittests.py  factorial_unittests.py  mie_unittests.py  py_integration_tests.py  readme.md
pypi_release/: build_release.sh  test_import.py  test_install.sh
tests/: Qmie.py  README.md  test.csv  test_binary_component_order.py  test_binary_limit.py  test_effective_qmie.py  test_flux_transforms.py  test_issues.py  test_performance.py  test_quantum.py  test_rdf.py  test_summation_consistency.py  test_unchanged_output.py  tools.py
tests/data/: diffusion_HardSphere.csv  diffusion_MieKinGas.csv  rdf_binary.csv  rdf_single.csv  thermal_conductivity_HardSphere.csv  thermal_conductivity_MieKinGas.csv  transport_properties_ljs.csv  viscosity_HardSphere.csv  viscosity_MieKinGas.csv
tests/sutherland/: s_tools.py  test_eff.py  test_output.py  test_rdf.py  test_terms.py
wheelhouse/: pykingas-2.3.0-cp312-cp312-macosx_15_0_arm64.whl
